Archive2/e2/16b41511fb3af9/main.cpp
#include <iostream>

#define ROUND(a) ((int)(a+.5))

int main() {
    std::cout << ROUND(1 << 2);   
}